Documentos de referencia y pregunta uno contestada parcialmente, faltan citas

--- a/Sesion_1/document/package.tex
+++ b/Sesion_1/document/package.tex
@@ -30,3 +30,5 @@
     urlcolor=urlcolor,
     citecolor=citecolor,
 }
+\newcommand{\prom}[1]{$\left\langle #1 \right\rangle$}
+\newcommand{\prommath}[1]{\left\langle #1 \right\rangle}
