--- a/Sesion_1/document/sesion1_giovanni_gamaliel_lopez_padilla.tex
+++ b/Sesion_1/document/sesion1_giovanni_gamaliel_lopez_padilla.tex
@@ -16,6 +16,7 @@
 \input{pregunta2.tex}
 \input{pregunta3.tex}
 \input{pregunta4.tex}
-%\bibliographystyle{apalike}
-%\bibliography{references}
+\bibliographystyle{abbrv}
+\bibliography{references}
+\nocite{*}
 \end{document}
