Preguntas contestadas, solo falta la tres y encontrar referencias

--- a/Sesion_1/document/package.tex
+++ b/Sesion_1/document/package.tex
@@ -13,6 +13,7 @@
 \usepackage[usenames]{color}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{float}
+\usepackage{bm}
 \parindent=0mm
 \pagestyle{empty}
 \spanishdecimal{.}
