--- a/Sesion_1/document/pregunta4.tex
+++ b/Sesion_1/document/pregunta4.tex
@@ -1,1 +1,2 @@
-\subsubsection*{¿Cómo da Z\textsubscript{l} en cierta dirección?}
+\section{¿Cómo da Z\textsubscript{h} en cierta dirección?}
+Debido a que Z\textsubscript{h} es calculado en la ecuación \ref{eq:zl}, anteriormente se comento que las ecuaciones \ref{eq:sigmal} y \ref{eq:sl} guardan información acerca del desplazamiento y dirección de la posición de busqueda para los nuevos hijos (ecuación \ref{eq:zl}). Esto es porque \prom{\sigma} se encuentra pesada por los $\mu$ hijos y la matriz de covariancia C contiene información acerca de la dirección preferencial para encontrar el mínimo local.
