--- a/Sesion_1/document/references.bib
+++ b/Sesion_1/document/references.bib
@@ -5,13 +5,29 @@
   eprint        = {1604.00772},
   archiveprefix = {arXiv},
   primaryclass  = {cs.LG},
-  url           = {https://arxiv.org/abs/1604.00772}
+  note          = {https://arxiv.org/abs/1604.00772}
 }
-@conference{conference_hansen_2013,
+@misc{conference_hansen_2013_page_25,
   author       = {Auger,Anne  and Hansen, Nikolaus},
   title        = {Tutorial CMA-ES — Evolution Strategies andCovariance Matrix Adaptation},
   year         = 2013,
   month        = 7,
   organization = {GECCO’13},
-  note         = {\url{http://www.cmap.polytechnique.fr/~nikolaus.hansen/gecco2013-CMA-ES-tutorial.pdf}}
+  note         = {pp 25. \url{http://www.cmap.polytechnique.fr/~nikolaus.hansen/gecco2013-CMA-ES-tutorial.pdf}}
+}
+@misc{conference_hansen_2013_page_18,
+  author       = {Auger,Anne  and Hansen, Nikolaus},
+  title        = {Tutorial CMA-ES — Evolution Strategies andCovariance Matrix Adaptation},
+  year         = 2013,
+  month        = 7,
+  organization = {GECCO’13},
+  note         = {pp 18. \url{http://www.cmap.polytechnique.fr/~nikolaus.hansen/gecco2013-CMA-ES-tutorial.pdf}}
+}
+@misc{conference_hansen_2013_page_21,
+  author       = {Auger,Anne  and Hansen, Nikolaus},
+  title        = {Tutorial CMA-ES — Evolution Strategies andCovariance Matrix Adaptation},
+  year         = 2013,
+  month        = 7,
+  organization = {GECCO’13},
+  note         = {pp 21. \url{http://www.cmap.polytechnique.fr/~nikolaus.hansen/gecco2013-CMA-ES-tutorial.pdf}}
 }
