--- a/Sesion_1/document/title.tex
+++ b/Sesion_1/document/title.tex
@@ -1,3 +1,3 @@
-Estimating AOD and its comparison with satellite data and PM\textsubscript{10} measured in Monterrey, Mexico\\
+\textbf{\textit{Algoritmo CMA-}}$\bm{\mathit{\sigma}}$\textbf{\textit{-SA-ES}}\\
 
-Giovanni Gamaliel López Padilla\\
+\textbf{Giovanni Gamaliel López Padilla}\\
