Finalizado, update de bibliografia

--- a/Sesion_1/document/references.bib
+++ b/Sesion_1/document/references.bib
@@ -5,7 +5,7 @@
   eprint        = {1604.00772},
   archiveprefix = {arXiv},
   primaryclass  = {cs.LG},
-  note          = {https://arxiv.org/abs/1604.00772}
+  note          = {\url{https://arxiv.org/abs/1604.00772}}
 }
 @misc{conference_hansen_2013_page_25,
   author       = {Auger,Anne  and Hansen, Nikolaus},
@@ -30,4 +30,18 @@
   month        = 7,
   organization = {GECCO’13},
   note         = {pp 21. \url{http://www.cmap.polytechnique.fr/~nikolaus.hansen/gecco2013-CMA-ES-tutorial.pdf}}
+}
+@misc{mei2021covariance,
+  title         = {Covariance Matrix Adaptation Evolution Strategy Assisted by Principal Component Analysis},
+  author        = {Yangjie Mei and Hao Wang},
+  year          = {2021},
+  eprint        = {2105.03687},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.NE},
+  note          = {\url{https://arxiv.org/pdf/2105.03687.pdf}}
+}
+@misc{CMA_page,
+  title        = {The CMA Evolution Strategy},
+  howpublished = {Accesido el día 15 de junio de 2021 \url{http://cma.gforge.inria.fr/}},
+  year         = {2016}
 }
