--- a/Sesion_1/document/title.tex
+++ b/Sesion_1/document/title.tex
@@ -1,3 +1,8 @@
-\textbf{\textit{Algoritmo CMA-}}$\bm{\mathit{\sigma}}$\textbf{\textit{-SA-ES}}\\
+
+\textbf{Propedéuctico CIMAT - 2021\\
+    \textit{Algoritmo CMA-}}$\bm{\mathit{\sigma}}$\textbf{\textit{-SA-ES}}\\
+
+\textbf{\today}
+\\
 
 \textbf{Giovanni Gamaliel López Padilla}\\
